--- a/algorithm_page_main_visual.html
+++ b/algorithm_page_main_visual.html
@@ -4,6 +4,25 @@
         <link rel="stylesheet" href="algorithm_page_main_style.css">
     </head>
     <body>
+        <div class="main_container">
+            <div class="container algorithm_select">
+                <h2>Algorithm selection</h2>
+                <ul class="">
+                    <li>sorting</li>
+                    <li>searching</li>
+                    <li>other</li>
+                </ul>
+            </div>
+            <div class="flex_row">
+               <div class="container algorithm_visual">
 
+                </div>
+                <div class="container algorithm_control">
+
+                </div>  
+            </div>
+            
+        </div>
+        
     </body>
 </html>
