checking changes work from new computer

--- a/algorithm_page_main_visual.html
+++ b/algorithm_page_main_visual.html
@@ -7,11 +7,11 @@
         <div class="main_container">
             <div class="container algorithm_select">
                 <h2>Algorithm selection</h2>
-                <ul class="">
-                    <li>sorting</li>
-                    <li>searching</li>
-                    <li>other</li>
-                </ul>
+                <div class="selection_container">
+                    <div class="drop_down">
+                        <h3>sorting</h3>
+                    </div>
+                </div>
             </div>
             <div class="flex_row">
                <div class="container algorithm_visual">
