creating basic sidebar

--- a/algorithm_page_main_visual.html
+++ b/algorithm_page_main_visual.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <div class="main_container">
-            <div class="container algorithm_select">
+            <div class="algorithm_select">
                 <h2>Algorithm selection</h2>
-                <div class="selection_container">
-                    <div class="drop_down">
-                        <h3>sorting</h3>
-                    </div>
+                <div class="sidebar">
+                    <button class="tab_header">sorting</button>
+                    <button class="tab_header">searching</button>
+                    <button class="tab_header">other</button>
                 </div>
             </div>
             <div class="flex_row">
